# Walmart-Refine

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: chains.py  logger.py  main.py  prompts.py  rules.py  utils.py
outputs/: refined_9a5e38d1-00ea-4a70-98c1-9392e3d26b7a_walmart_content_refiner_input.csv  refined_c5f4e651-aa80-40f1-9ce7-2341054c5bed_walmart_content_refiner_input.csv
